--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,7 @@ body {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-::selection{
+::selection {
   color: #fff;
   background-color: purple;
 }
@@ -702,7 +702,7 @@ p {
     padding-left: 30px;
   }
 }
-#header-mnb{
+#header-mnb {
   background-color: #ffffff8f;
   backdrop-filter: blur(20px);
 }
@@ -1320,6 +1320,9 @@ p {
   z-index: 30;
   padding: 30px 60px;
   border-bottom: 1px solid #ffffff2e;
+  background-color: #2d223fc9;
+  backdrop-filter: blur(20px);
+
 }
 @media only screen and (min-width: 992px) and (max-width: 1200px) {
   .infetech-header-area-2 .header-main-nav-layout-2 {
@@ -1980,13 +1983,14 @@ p {
   background-size: cover;
   position: relative;
   z-index: 10;
+  margin-top: 100px;
 }
-.infetech-banner-area-layout-2 .infetech-banner-slide-item.item-2 {
+/* .infetech-banner-area-layout-2 .infetech-banner-slide-item.item-2 {
   background: url(../images/Costa.jpg);
 }
 .infetech-banner-area-layout-2 .infetech-banner-slide-item.item-3 {
   background: url(../images/Costa.jpg);
-}
+} */
 .infetech-banner-area-layout-2 .infetech-banner-slide-item::before {
   position: absolute;
   content: "";
@@ -2040,7 +2044,7 @@ p {
   padding-top: 39px;
   padding-bottom: 16px;
 }
-#about-title{
+#about-title {
   font-size: 40px;
 }
 @media only screen and (min-width: 992px) and (max-width: 1200px) {
