--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@ body {
   font-weight: normal;
   font-style: normal;
   color: #6c6a72;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 html{
   overflow-x: hidden;
@@ -2051,6 +2051,66 @@ p {
   padding-top: 39px;
   padding-bottom: 16px;
 }
+/* whatsapp popup style */
+      .whatsapp-popup {
+        height: 100vh;
+        width: 100%;
+        display: none;
+        align-items: center;
+        justify-content: center;
+        background-color: #602deed5;
+        transition: ease-in-out 0.5s;
+        backdrop-filter: blur(20px);
+        -webkit-backdrop-filter: blur(20px);
+        z-index: 1000;
+        position: fixed;
+        top: 0;
+        left: 0;
+      }
+      .whatsapp-popup div {
+        border-radius: 10px;
+        padding: 50px;
+        background-color: aliceblue;
+        display: grid;
+        grid-template-columns: repeat(autofit, minmax(1fr, 300px));
+        column-gap: 10px;
+        gap: 20px;
+        transition: ease-in-out 0.5s;
+        
+      }
+      #wa-pop-h5 {
+        grid-column: 1 / 3;
+        text-align: center;
+      }
+      .wa-pop-btn {
+        border: transparent;
+        background-color: #5f2dee;
+        font-weight: 600;
+        font-size: large;
+        color: #fff;
+        border-radius: 10px;
+        transition: ease-in-out 0.5s;
+      }
+      #wa-end-btn {
+        padding: 10px;
+      }
+      #wa-btn a {
+        border-radius: 10px;
+        padding: 10px;
+        color: #fff;
+        width: 100%;
+        transition: ease-in-out 0.5s;
+      }
+      #wa-end-btn:hover {
+        background-color: red;
+      }
+      #wa-btn a:hover {
+        background-color: lime;
+        height: 100%;
+        width: 100%;
+      }
+/* whatsapp popup style ends */
+
 #about-title {
   font-size: 40px;
 }
@@ -4129,7 +4189,7 @@ p {
   position: fixed;
   left: 0;
   top: 0;
-  z-index: 1000;
+  z-index: 999;
   transition: ease .5s;
 }
 .web-container div{
@@ -7253,6 +7313,7 @@ p {
   background-position: center;
   background-repeat: no-repeat;
   overflow: hidden;
+  margin-bottom: 50px;
 }
 
 .clients-tabs-item ul.nav {
@@ -8189,7 +8250,7 @@ p {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  margin-top: -60px;
+  margin-top: 60px;
 }
 @media (max-width: 767px) {
   .infetech-promo-banner-area {
