--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@ body {
   color: #6c6a72;
   /* overflow-x: hidden; */
 }
-html{
+html {
   overflow-x: hidden;
 }
 * {
@@ -148,7 +148,8 @@ p {
 }
 
 /*===== All Button Style =====*/
-.main-btn {
+.main-btn,
+.pop-btn {
   display: inline-block;
   font-weight: 700;
   text-align: center;
@@ -179,7 +180,8 @@ p {
   overflow: hidden;
   letter-spacing: 1.5px;
 }
-.main-btn::before {
+.main-btn::before,
+.pop-btn::before {
   position: absolute;
   content: "";
   background-color: #b882fc;
@@ -195,16 +197,18 @@ p {
   transition: all 500ms ease;
   opacity: 1;
 }
-.main-btn:hover {
+.main-btn:hover,
+.pop-btn:hover {
   background-color: #fff;
   color: #5f2dee;
   border-color: #5f2dee;
 }
-.main-btn:hover::before {
+.main-btn::before,
+.pop-btn:hover::before {
   height: 400px;
   opacity: 0;
 }
-#web-btn{
+#web-btn {
   background-color: #fff;
   color: #5f2dee;
 }
@@ -1329,7 +1333,6 @@ p {
   border-bottom: 1px solid #ffffff2e;
   background-color: #2d223fc9;
   backdrop-filter: blur(20px);
-
 }
 @media only screen and (min-width: 992px) and (max-width: 1200px) {
   .infetech-header-area-2 .header-main-nav-layout-2 {
@@ -1605,6 +1608,27 @@ p {
   color: #1d1729;
 }
 
+.infetech-testimonial-slide .col-lg-6 {
+  padding-left: 15px;
+  padding-right: 15px; }
+.infetech-testimonial-slide .slick-dots {
+  position: absolute;
+  left: 50%;
+  bottom: -18px;
+  transform: translateX(-50%);
+  width: auto; }
+  .infetech-testimonial-slide .slick-dots li {
+    display: inline-block;
+    margin: 0 5px; }
+    .infetech-testimonial-slide .slick-dots li button {
+      border: 0;
+      background: #bbb9be;
+      height: 4px;
+      width: 16px;
+      font-size: 0; }
+    .infetech-testimonial-slide .slick-dots li.slick-active button {
+      background: #5f2dee; }
+
 @media (min-width: 768px) {
   .header-sticky.sticky {
     position: fixed;
@@ -1643,146 +1667,149 @@ p {
   }
 }
 /*Loader Css*/
-.preloader {
-  background-color: #fff;
-  bottom: 0;
-  height: 100%;
-  left: 0;
-  position: fixed;
-  right: 0;
-  top: 0;
-  width: 100%;
-  z-index: 999999;
-}
+      /*======================= 
+    Preloader
+=======================*/
+      .preloader {
+        position: fixed;
+        inset: 0;
+        z-index: 999;
+        background-color: #fff;
+      }
 
-.lds-ellipsis {
-  margin: 0 auto;
-  position: relative;
-  top: 50%;
-  -moz-transform: translateY(-50%);
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
-  width: 64px;
-  text-align: center;
-  z-index: 9999;
-}
+      .th-preloader {
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+        -ms-flex-align: center;
+        align-items: center;
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        height: 100%;
+        -webkit-box-pack: center;
+        -webkit-justify-content: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        position: fixed;
+        left: 0;
+        top: 0;
+        width: 100%;
+      }
 
-.lds-ellipsis span {
-  display: inline-block;
-  width: 15px;
-  height: 15px;
-  border-radius: 50%;
-  background: #5f2dee;
-  -webkit-animation: ball-pulse-sync 0.6s 0s infinite ease-in-out;
-  animation: ball-pulse-sync 0.6s 0s infinite ease-in-out;
-}
+      .th-preloader .animation-preloader {
+        position: absolute;
+        z-index: 100;
+      }
 
-.lds-ellipsis span:nth-child(1) {
-  -webkit-animation: ball-pulse-sync 0.6s -0.14s infinite ease-in-out;
-  animation: ball-pulse-sync 0.6s -0.14s infinite ease-in-out;
-}
+      .th-preloader .animation-preloader .txt-loading {
+        font-family: "Catamaran", sans-serif;
+        font-size: 72px;
+        line-height: 82px;
+        font-weight: 700;
+        text-align: center;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+      }
 
-.lds-ellipsis span:nth-child(2) {
-  -webkit-animation: ball-pulse-sync 0.6s -70ms infinite ease-in-out;
-  animation: ball-pulse-sync 0.6s -70ms infinite ease-in-out;
-}
+      .th-preloader .animation-preloader .txt-loading .characters {
+        color: rgba(0, 0, 0, 0.2);
+        position: relative;
+      }
 
-@-webkit-keyframes ball-pulse-sync {
-  33% {
-    -webkit-transform: translateY(10px);
-    transform: translateY(10px);
-  }
-  66% {
-    -webkit-transform: translateY(-10px);
-    transform: translateY(-10px);
-  }
-  100% {
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
-  }
-}
-@keyframes ball-pulse-sync {
-  33% {
-    -webkit-transform: translateY(10px);
-    transform: translateY(10px);
-  }
-  66% {
-    -webkit-transform: translateY(-10px);
-    transform: translateY(-10px);
-  }
-  100% {
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
-  }
-}
-@keyframes bubbleMover {
-  0% {
-    -webkit-transform: translateY(0px) translateX(0) rotate(0);
-    transform: translateY(0px) translateX(0) rotate(0);
-  }
-  30% {
-    -webkit-transform: translateY(30px) translateX(50px) rotate(15deg);
-    transform: translateY(30px) translateX(50px) rotate(15deg);
-    -webkit-transform-origin: center center;
-    transform-origin: center center;
-  }
-  50% {
-    -webkit-transform: translateY(50px) translateX(100px) rotate(45deg);
-    transform: translateY(50px) translateX(100px) rotate(45deg);
-    -webkit-transform-origin: right bottom;
-    transform-origin: right bottom;
-  }
-  80% {
-    -webkit-transform: translateY(30px) translateX(50px) rotate(15deg);
-    transform: translateY(30px) translateX(50px) rotate(15deg);
-    -webkit-transform-origin: left top;
-    transform-origin: left top;
-  }
-  100% {
-    -webkit-transform: translateY(0px) translateX(0) rotate(0);
-    transform: translateY(0px) translateX(0) rotate(0);
-    -webkit-transform-origin: center center;
-    transform-origin: center center;
-  }
-}
-@keyframes bubbleMover2 {
-  0% {
-    -webkit-transform: translateY(0px) translateX(0) rotate(0);
-    transform: translateY(0px) translateX(0) rotate(0);
-  }
-  30% {
-    transform: translateY(10px) translateX(20px) rotate(5deg);
-    -webkit-transform-origin: center center;
-    transform-origin: center center;
-  }
-  50% {
-    transform: translateY(20px) translateX(40px) rotate(20deg);
-    -webkit-transform-origin: right bottom;
-    transform-origin: right bottom;
-  }
-  80% {
-    transform: translateY(30px) translateX(40px) rotate(5deg);
-    -webkit-transform-origin: left top;
-    transform-origin: left top;
-  }
-  100% {
-    -webkit-transform: translateY(0px) translateX(0) rotate(0);
-    transform: translateY(0px) translateX(0) rotate(0);
-    -webkit-transform-origin: center center;
-    transform-origin: center center;
-  }
-}
-@keyframes pusher {
-  33% {
-    transform: scale(0.7);
-  }
-  66% {
-    transform: scale(1);
-  }
-  100% {
-    transform: scale(0.7);
-  }
-}
+      .th-preloader .animation-preloader .txt-loading .characters:before {
+        -webkit-animation: characters 4s infinite;
+        animation: characters 4s infinite;
+        color: #5f2dee;
+        content: attr(preloader-text);
+        left: 0;
+        opacity: 0;
+        position: absolute;
+        top: 0;
+        -webkit-transform: rotateY(-90deg);
+        transform: rotateY(-90deg);
+      }
+
+      .th-preloader
+        .animation-preloader
+        .txt-loading
+        .characters:nth-child(2):before {
+        -webkit-animation-delay: 0.2s;
+        animation-delay: 0.2s;
+      }
+
+      .th-preloader
+        .animation-preloader
+        .txt-loading
+        .characters:nth-child(3):before {
+        -webkit-animation-delay: 0.4s;
+        animation-delay: 0.4s;
+      }
+
+      .th-preloader
+        .animation-preloader
+        .txt-loading
+        .characters:nth-child(4):before {
+        -webkit-animation-delay: 0.6s;
+        animation-delay: 0.6s;
+      }
+
+      .th-preloader
+        .animation-preloader
+        .txt-loading
+        .characters:nth-child(5):before {
+        -webkit-animation-delay: 0.8s;
+        animation-delay: 0.8s;
+      }
+
+      .th-preloader
+        .animation-preloader
+        .txt-loading
+        .characters:nth-child(6):before {
+        -webkit-animation-delay: 1s;
+        animation-delay: 1s;
+      }
+
+      @media (max-width: 525px) {
+        .th-preloader .animation-preloader .txt-loading {
+          font-size: 30px;
+          line-height: 30px;
+        }
+      }
+
+      /* Animation of letters loading from the preloader */
+      @-webkit-keyframes characters {
+        0%,
+        75%,
+        100% {
+          opacity: 0;
+          -webkit-transform: rotateY(-90deg);
+          transform: rotateY(-90deg);
+        }
+        25%,
+        50% {
+          opacity: 1;
+          -webkit-transform: rotateY(0deg);
+          transform: rotateY(0deg);
+        }
+      }
+      @keyframes characters {
+        0%,
+        75%,
+        100% {
+          opacity: 0;
+          -webkit-transform: rotateY(-90deg);
+          transform: rotateY(-90deg);
+        }
+        25%,
+        50% {
+          opacity: 1;
+          -webkit-transform: rotateY(0deg);
+          transform: rotateY(0deg);
+        }
+      }
 /*===========================
     3.BANNER css 
 ===========================*/
@@ -2052,63 +2079,68 @@ p {
   padding-bottom: 16px;
 }
 /* whatsapp popup style */
-      .whatsapp-popup {
-        height: 100vh;
-        width: 100%;
-        display: none;
-        align-items: center;
-        justify-content: center;
-        background-color: #602deed5;
-        transition: ease-in-out 0.5s;
-        backdrop-filter: blur(20px);
-        -webkit-backdrop-filter: blur(20px);
-        z-index: 1000;
-        position: fixed;
-        top: 0;
-        left: 0;
-      }
-      .whatsapp-popup div {
-        border-radius: 10px;
-        padding: 50px;
-        background-color: aliceblue;
-        display: grid;
-        grid-template-columns: repeat(autofit, minmax(1fr, 300px));
-        column-gap: 10px;
-        gap: 20px;
-        transition: ease-in-out 0.5s;
-        
-      }
-      #wa-pop-h5 {
-        grid-column: 1 / 3;
-        text-align: center;
-      }
-      .wa-pop-btn {
-        border: transparent;
-        background-color: #5f2dee;
-        font-weight: 600;
-        font-size: large;
-        color: #fff;
-        border-radius: 10px;
-        transition: ease-in-out 0.5s;
-      }
-      #wa-end-btn {
-        padding: 10px;
-      }
-      #wa-btn a {
-        border-radius: 10px;
-        padding: 10px;
-        color: #fff;
-        width: 100%;
-        transition: ease-in-out 0.5s;
-      }
-      #wa-end-btn:hover {
-        background-color: red;
-      }
-      #wa-btn a:hover {
-        background-color: lime;
-        height: 100%;
-        width: 100%;
-      }
+.whatsapp-popup {
+  height: 100vh;
+  width: 100%;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  background-color: #602deed5;
+  transition: ease-in-out 0.5s;
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
+  z-index: 1000;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+.whatsapp-popup div {
+  border-radius: 10px;
+  padding: 50px;
+  background-color: aliceblue;
+  display: grid;
+  grid-template-columns: repeat(autofit, minmax(1fr, 300px));
+  column-gap: 10px;
+  gap: 20px;
+  transition: ease-in-out 0.5s;
+}
+#wa-pop-h5 {
+  grid-column: 1 / 3;
+  text-align: center;
+}
+.wa-pop-btn, #wa-end-btn {
+  border: transparent;
+  background-color: #5f2dee;
+  font-weight: 600;
+  font-size: large;
+  color: #fff;
+  border-radius: 10px;
+  transition: ease-in-out 0.5s;
+}
+/* #wa-end-btn {
+  padding: 10px;
+} */
+#wa-btn a {
+  border-radius: 10px;
+  padding: 10px;
+  color: #fff;
+  width: 100%;
+  transition: ease-in-out 0.5s;
+}
+#wa-end-btn:hover {
+  background-color: red;
+}
+#wa-btn a:hover {
+  background-color: lime;
+  height: 100%;
+  width: 100%;
+}
+#form-learnmore{
+  padding: 0;
+  background-color: #fff;
+  color: #000;
+  text-transform: capitalize;
+}
 /* whatsapp popup style ends */
 
 #about-title {
@@ -4178,7 +4210,7 @@ p {
 }
 /* web popup */
 
-.web-container{
+.web-container {
   display: none;
   height: 100vh;
   width: 100%;
@@ -4190,9 +4222,9 @@ p {
   left: 0;
   top: 0;
   z-index: 999;
-  transition: ease .5s;
+  transition: ease 0.5s;
 }
-.web-container div{
+.web-container div {
   display: flex;
   flex-direction: column;
   gap: 50px;
@@ -4200,45 +4232,48 @@ p {
   backdrop-filter: blur(20px);
   border-radius: 20px;
   padding: 50px;
-  transition: ease .5s;
+  transition: ease 0.5s;
 }
 @media (max-width: 992px) {
-  .web-container{
+  .web-container {
     z-index: 10;
   }
   .web-container div {
-  padding-top: 1px;
+    padding-top: 1px;
   }
 }
 @media (max-width: 767px) {
-  .web-container{
+  .web-container {
     justify-content: center;
     z-index: 100;
   }
   .web-container div {
-  padding: 20px;
+    padding: 20px;
   }
-  #web-close{
+  #web-close {
     align-self: center;
     margin-right: -60px;
+    z-index: 1000;
   }
 }
 
-.web-container div button{
+.web-container div button {
   outline: transparent;
   border: transparent;
   padding: 10px;
   border-radius: 10px;
 }
-#web-close{
+#web-close {
   outline: transparent;
   border: transparent;
   padding: 10px;
   border-radius: 10px;
   align-self: flex-start;
-  margin-top: 65px;
+  margin-top: 50px;
+  margin-right: -50px;
+  z-index: 1000;
 }
-#web-form{
+#web-form {
   display: none;
   justify-content: center;
   align-items: center;
@@ -4250,25 +4285,26 @@ p {
   background-color: #ffffffda;
   backdrop-filter: blur(20px);
   z-index: 100;
-  transition: ease .5s;
+  transition: ease 0.5s;
 }
-#web-form form{
+#web-form form {
   background: #f4f2f9;
   padding: 60px 80px 50px;
   background-image: url(../images/contact-shape.png);
   background-size: auto;
   background-position: top right;
   background-repeat: no-repeat;
-  transition: .5s ease;
+  transition: 0.5s ease;
 }
-#form-close{
+#form-close {
   outline: transparent;
   border: transparent;
   padding: 10px;
   border-radius: 10px;
   align-self: flex-start;
-  margin-top: 5px;
+  margin-top: 50px;
   margin-right: -50px;
+  z-index: inherit;
 }
 @media only screen and (min-width: 992px) and (max-width: 1200px) {
   #web-form form {
@@ -4560,7 +4596,7 @@ p {
   .single-project-slider-item:hover
   .content
   .link {
-  background: #5f2dee;
+  background: #6a3fe2;
   color: #fff;
 }
 
