--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -226,7 +226,7 @@ p {
   }
 }
 .section-title span {
-  color: #5f2dee;
+  color: #fff;
   font-size: 16px;
   font-weight: 600;
   position: relative;
@@ -239,7 +239,7 @@ p {
   top: 50%;
   transform: translateY(-50%);
   height: 2px;
-  background: #5f2dee;
+  background: #fff;
   width: 16px;
 }
 .section-title .title {
@@ -1610,24 +1610,29 @@ p {
 
 .infetech-testimonial-slide .col-lg-6 {
   padding-left: 15px;
-  padding-right: 15px; }
+  padding-right: 15px;
+}
 .infetech-testimonial-slide .slick-dots {
   position: absolute;
   left: 50%;
   bottom: -18px;
   transform: translateX(-50%);
-  width: auto; }
-  .infetech-testimonial-slide .slick-dots li {
-    display: inline-block;
-    margin: 0 5px; }
-    .infetech-testimonial-slide .slick-dots li button {
-      border: 0;
-      background: #bbb9be;
-      height: 4px;
-      width: 16px;
-      font-size: 0; }
-    .infetech-testimonial-slide .slick-dots li.slick-active button {
-      background: #5f2dee; }
+  width: auto;
+}
+.infetech-testimonial-slide .slick-dots li {
+  display: inline-block;
+  margin: 0 5px;
+}
+.infetech-testimonial-slide .slick-dots li button {
+  border: 0;
+  background: #bbb9be;
+  height: 4px;
+  width: 16px;
+  font-size: 0;
+}
+.infetech-testimonial-slide .slick-dots li.slick-active button {
+  background: #5f2dee;
+}
 
 @media (min-width: 768px) {
   .header-sticky.sticky {
@@ -1667,149 +1672,149 @@ p {
   }
 }
 /*Loader Css*/
-      /*======================= 
+/*======================= 
     Preloader
 =======================*/
-      .preloader {
-        position: fixed;
-        inset: 0;
-        z-index: 999;
-        background-color: #fff;
-      }
+.preloader {
+  position: fixed;
+  inset: 0;
+  z-index: 999;
+  background-color: #fff;
+}
 
-      .th-preloader {
-        -webkit-box-align: center;
-        -webkit-align-items: center;
-        -ms-flex-align: center;
-        align-items: center;
-        display: -webkit-box;
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: flex;
-        height: 100%;
-        -webkit-box-pack: center;
-        -webkit-justify-content: center;
-        -ms-flex-pack: center;
-        justify-content: center;
-        position: fixed;
-        left: 0;
-        top: 0;
-        width: 100%;
-      }
+.th-preloader {
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+}
 
-      .th-preloader .animation-preloader {
-        position: absolute;
-        z-index: 100;
-      }
+.th-preloader .animation-preloader {
+  position: absolute;
+  z-index: 100;
+}
 
-      .th-preloader .animation-preloader .txt-loading {
-        font-family: "Catamaran", sans-serif;
-        font-size: 72px;
-        line-height: 82px;
-        font-weight: 700;
-        text-align: center;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-      }
+.th-preloader .animation-preloader .txt-loading {
+  font-family: "Catamaran", sans-serif;
+  font-size: 72px;
+  line-height: 82px;
+  font-weight: 700;
+  text-align: center;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
 
-      .th-preloader .animation-preloader .txt-loading .characters {
-        color: rgba(0, 0, 0, 0.2);
-        position: relative;
-      }
+.th-preloader .animation-preloader .txt-loading .characters {
+  color: rgba(0, 0, 0, 0.2);
+  position: relative;
+}
 
-      .th-preloader .animation-preloader .txt-loading .characters:before {
-        -webkit-animation: characters 4s infinite;
-        animation: characters 4s infinite;
-        color: #5f2dee;
-        content: attr(preloader-text);
-        left: 0;
-        opacity: 0;
-        position: absolute;
-        top: 0;
-        -webkit-transform: rotateY(-90deg);
-        transform: rotateY(-90deg);
-      }
+.th-preloader .animation-preloader .txt-loading .characters:before {
+  -webkit-animation: characters 4s infinite;
+  animation: characters 4s infinite;
+  color: #5f2dee;
+  content: attr(preloader-text);
+  left: 0;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  -webkit-transform: rotateY(-90deg);
+  transform: rotateY(-90deg);
+}
 
-      .th-preloader
-        .animation-preloader
-        .txt-loading
-        .characters:nth-child(2):before {
-        -webkit-animation-delay: 0.2s;
-        animation-delay: 0.2s;
-      }
+.th-preloader
+  .animation-preloader
+  .txt-loading
+  .characters:nth-child(2):before {
+  -webkit-animation-delay: 0.2s;
+  animation-delay: 0.2s;
+}
 
-      .th-preloader
-        .animation-preloader
-        .txt-loading
-        .characters:nth-child(3):before {
-        -webkit-animation-delay: 0.4s;
-        animation-delay: 0.4s;
-      }
+.th-preloader
+  .animation-preloader
+  .txt-loading
+  .characters:nth-child(3):before {
+  -webkit-animation-delay: 0.4s;
+  animation-delay: 0.4s;
+}
 
-      .th-preloader
-        .animation-preloader
-        .txt-loading
-        .characters:nth-child(4):before {
-        -webkit-animation-delay: 0.6s;
-        animation-delay: 0.6s;
-      }
+.th-preloader
+  .animation-preloader
+  .txt-loading
+  .characters:nth-child(4):before {
+  -webkit-animation-delay: 0.6s;
+  animation-delay: 0.6s;
+}
 
-      .th-preloader
-        .animation-preloader
-        .txt-loading
-        .characters:nth-child(5):before {
-        -webkit-animation-delay: 0.8s;
-        animation-delay: 0.8s;
-      }
+.th-preloader
+  .animation-preloader
+  .txt-loading
+  .characters:nth-child(5):before {
+  -webkit-animation-delay: 0.8s;
+  animation-delay: 0.8s;
+}
 
-      .th-preloader
-        .animation-preloader
-        .txt-loading
-        .characters:nth-child(6):before {
-        -webkit-animation-delay: 1s;
-        animation-delay: 1s;
-      }
+.th-preloader
+  .animation-preloader
+  .txt-loading
+  .characters:nth-child(6):before {
+  -webkit-animation-delay: 1s;
+  animation-delay: 1s;
+}
 
-      @media (max-width: 525px) {
-        .th-preloader .animation-preloader .txt-loading {
-          font-size: 30px;
-          line-height: 30px;
-        }
-      }
+@media (max-width: 525px) {
+  .th-preloader .animation-preloader .txt-loading {
+    font-size: 30px;
+    line-height: 30px;
+  }
+}
 
-      /* Animation of letters loading from the preloader */
-      @-webkit-keyframes characters {
-        0%,
-        75%,
-        100% {
-          opacity: 0;
-          -webkit-transform: rotateY(-90deg);
-          transform: rotateY(-90deg);
-        }
-        25%,
-        50% {
-          opacity: 1;
-          -webkit-transform: rotateY(0deg);
-          transform: rotateY(0deg);
-        }
-      }
-      @keyframes characters {
-        0%,
-        75%,
-        100% {
-          opacity: 0;
-          -webkit-transform: rotateY(-90deg);
-          transform: rotateY(-90deg);
-        }
-        25%,
-        50% {
-          opacity: 1;
-          -webkit-transform: rotateY(0deg);
-          transform: rotateY(0deg);
-        }
-      }
+/* Animation of letters loading from the preloader */
+@-webkit-keyframes characters {
+  0%,
+  75%,
+  100% {
+    opacity: 0;
+    -webkit-transform: rotateY(-90deg);
+    transform: rotateY(-90deg);
+  }
+  25%,
+  50% {
+    opacity: 1;
+    -webkit-transform: rotateY(0deg);
+    transform: rotateY(0deg);
+  }
+}
+@keyframes characters {
+  0%,
+  75%,
+  100% {
+    opacity: 0;
+    -webkit-transform: rotateY(-90deg);
+    transform: rotateY(-90deg);
+  }
+  25%,
+  50% {
+    opacity: 1;
+    -webkit-transform: rotateY(0deg);
+    transform: rotateY(0deg);
+  }
+}
 /*===========================
     3.BANNER css 
 ===========================*/
@@ -2108,7 +2113,20 @@ p {
   grid-column: 1 / 3;
   text-align: center;
 }
-.wa-pop-btn, #wa-end-btn {
+.serv-txt {
+  grid-column: 1/-1;
+  font-size: 7rem;
+  letter-spacing: 5px;
+  word-spacing: 5px;
+  color: transparent;
+  -webkit-text-stroke: 2px #000;
+  text-align: center;
+}
+
+.wa-pop-btn,
+#wa-end-btn,
+.wa-pop-btn-serv,
+#wa-end-btn-serv {
   border: transparent;
   background-color: #5f2dee;
   font-weight: 600;
@@ -2117,9 +2135,9 @@ p {
   border-radius: 10px;
   transition: ease-in-out 0.5s;
 }
-/* #wa-end-btn {
-  padding: 10px;
-} */
+#wa-btn-serv a {
+  color: #fff;
+}
 #wa-btn a {
   border-radius: 10px;
   padding: 10px;
@@ -2135,7 +2153,7 @@ p {
   height: 100%;
   width: 100%;
 }
-#form-learnmore{
+#form-learnmore {
   padding: 0;
   background-color: #fff;
   color: #000;
@@ -4880,6 +4898,133 @@ p {
 }
 .infetech-project-details-list-area .single-project-item {
   margin-bottom: 30px;
+}
+.infetech-project-area {
+  background-color: #521cbda9;
+  background-image: url(../images/client-bg-line.png);
+  background-size: contain;
+  background-position: center;
+  background-attachment: fixed;
+}
+.container-serv {
+  background-color: #8c69d356;
+  display: flex;
+  flex-direction: column;
+}
+.serv-content {
+  background: radial-gradient(#1d1729 90%, #5f2dee 10%);
+  backdrop-filter: blur(20px);
+  border-radius: 10px;
+  padding: 20px;
+  width: fit-content;
+  height: fit-content;
+  color: #fff;
+}
+.saintaco-serv {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  justify-content: center;
+}
+#General-services {
+  grid-column: 1 / 2;
+  z-index: 1;
+}
+#computer-services-main {
+  display: flex;
+}
+#Computer-services {
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#computer-services {
+  animation: bounces 10s infinite;
+  margin-bottom: 50px;
+}
+.service-img img {
+  border-radius: 10px;
+}
+.service-img {
+  margin-top: 100px;
+  grid-column: 1 / 2;
+  animation: bounce 10s infinite;
+}
+.serv-content-list{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+@keyframes bounce {
+  0%,
+  100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-50px);
+  }
+}
+@keyframes bounces {
+  0%,
+  100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(50px);
+  }
+}
+#service-gen-img {
+  margin-top: -200px;
+  grid-column: 3 / 4;
+}
+
+.serv-head {
+  background-image: url(../images/client-bg-line.png);
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  width: max-content;
+  gap: 20px;
+}
+.serv-head h3 {
+  color: #fff;
+  text-decoration: underline;
+}
+#cmp-img {
+  transform: rotateY(180deg);
+}
+@media screen and (max-width:1200px){
+  .serv-txt, #General-services{
+      font-size: 5rem;
+      z-index: 0;
+    }
+}
+@media screen and (max-width:995px){
+  .service-img{
+    display: none;
+  }
+  #computer-services{
+    animation: none;
+    margin-bottom: 0;
+  }
+  .saintaco-serv{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+  }
+#General-services {
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+}
+#service-gen-img {
+  margin-top: 50px;
+}
+  .serv-txt, #General-services{
+      font-size: 3rem;
+      margin-top: 50px;
+    }
 }
 
 /*===========================
